updated all tests to check for bolt ready instead of http ready